re-fix safe dash overflow issue

--- a/core/safeDash/safeDash.css
+++ b/core/safeDash/safeDash.css
@@ -146,7 +146,9 @@ opacity:1;
 }
 
 body.MissingE_safeDash #posts li.post .post_content {
-overflow-x:hidden;
+overflow:hidden;
+padding-bottom:5px;
+margin-bottom:-5px;
 }
 
 body.MissingE_safeDash #posts li.post.video .post_content,
